--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 python-can = "^4.0.0"
 rich = "^12.2.0"
 requests = "^2.27.1"
+PySimpleGUI = "^4.59.0"
 
 [tool.poetry.dev-dependencies]
 
