--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python-can = "^4.0.0"
 rich = "^12.2.0"
 requests = "^2.27.1"
 PySimpleGUI = "^4.59.0"
+Pillow = "^9.1.0"
 
 [tool.poetry.dev-dependencies]
 
